--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "bundle/gundo"]
 	path = bundle/gundo
 	url = https://github.com/sjl/gundo.vim.git
+[submodule "bundle/pdv"]
+	path = bundle/pdv
+	url = https://github.com/vim-scripts/PDV--phpDocumentor-for-Vim
