--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "bundle/unimpaired"]
 	path = bundle/unimpaired
 	url = https://github.com/tpope/vim-unimpaired.git
+[submodule "bundle/dbgp"]
+	path = bundle/dbgp
+	url = git@github.com:tipclapper/DBGp-Remote-Debugger-Interface.git
